[K/N] Allow using JNI in CLI tools on JDK 24+ and Unsafe on JDK =24
The K/N compiler and other CLI tools use JNI to invoke native code like
LLVM and libclang.
They also use `sun.misc.Unsafe` memory access methods when run on JDK 24
or older.

Both cause JVM to emit warnings on JDK 24+. To mitigate that, this
commit makes the CLI tool scripts pass the corresponding JVM flags:
* `--enable-native-access=ALL-UNNAMED` on JDK 24+.
* `--sun-misc-unsafe-memory-access=allow` on JDK =24.

Older JDK versions don't support those flags, so the scripts now need to
check the JDK version. This logic is basically copy-pasted from
kotlinc/kotlinc.bat (used by Kotlin/JVM), added there in a31ad29.

^KT-85538 Fixed

Co-authored-by: ChatGPT <noreply@openai.com>